--- a/pferde/src/index.css
+++ b/pferde/src/index.css
@@ -1,4 +1,5 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
+/* @import "node_modules/react-modal-video/scss/modal-video.scss"; */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
